--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Contoh Desain Promosi – JP Desainer Kreatif</title>
+  <title>JP Desainer Kreatif – Desain Promosi</title>
 
-  <!-- Meta sosial -->
+  <!-- Meta sosial untuk thumbnail saat dibagikan -->
   <meta property="og:title" content="JP Desainer Kreatif – Desain Promosi" />
-  <meta property="og:description" content="Contoh hasil desain promosi JP Desainer Kreatif. Tampil profesional dan siap cetak." />
+  <meta property="og:description" content="Contoh hasil desain promosi JP Desainer Kreatif. Desain eksklusif, siap cetak besar tanpa pecah." />
   <meta property="og:image" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/" />
@@ -34,28 +34,25 @@
       font-size: 1.8rem;
     }
     .container {
-      max-width: 900px;
+      max-width: 960px;
       margin: auto;
       padding: 1.5rem;
     }
-    .responsive-embed {
-      position: relative;
-      padding-bottom: 56.25%;
-      height: 0;
-      overflow: hidden;
-      background: #fff;
-      border: 1px solid #ddd;
-    }
-    .responsive-embed object {
-      position: absolute;
-      top: 0; left: 0;
+    .svg-container {
       width: 100%;
-      height: 100%;
+      background: transparent;
     }
-    .fallback-image {
-      display: none;
+    .svg-container object {
       width: 100%;
       height: auto;
+      display: block;
+      border: none;
+    }
+    .svg-container img {
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0;
     }
     .cta {
       margin-top: 2rem;
@@ -78,16 +75,6 @@
       color: #888;
     }
 
-    /* Fallback for internal browser (Facebook, etc) */
-    @supports not (object-fit: cover) {
-      .responsive-embed object {
-        display: none;
-      }
-      .fallback-image {
-        display: block;
-      }
-    }
-
     @media screen and (max-width: 480px) {
       header h1 {
         font-size: 1.5rem;
@@ -107,15 +94,15 @@
   </header>
 
   <div class="container">
-    <div class="responsive-embed">
+    <div class="svg-container">
+      <!-- Tampilkan SVG, fallback ke JPG jika gagal -->
       <object data="Promosi.svg" type="image/svg+xml">
-        <!-- fallback untuk browser yang tidak bisa menampilkan SVG -->
-        <img src="preview.jpg" alt="Preview Desain Promosi" class="fallback-image" />
+        <img src="preview.jpg" alt="Preview desain promosi JP Desainer Kreatif" />
       </object>
     </div>
 
     <div class="cta">
-      <p>Ingin desain seperti ini? Konsultasi GRATIS di WhatsApp:</p>
+      <p>Ingin desain seperti ini? Konsultasi GRATIS via WhatsApp:</p>
       <a href="https://wa.me/6285212887849" target="_blank">Hubungi Sekarang</a>
     </div>
   </div>
