--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JP Desainer Kreatif</title>
+  <meta property="og:title" content="JP Desainer Kreatif – Desain Logo & Visual Branding" />
+  <meta property="og:description" content="Desain eksklusif, siap cetak besar, bukan stok massal. Cocok untuk brand kamu!" />
+  <meta property="og:image" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.jpg" />
+  <meta property="og:url" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/" />
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <style>
+    @font-face {
+      font-family: 'Angelface';
+      src: url('fonts/Angelface.otf') format('opentype');
+      font-display: swap;
+    }
     * {margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth;}
     body {
       font-family: sans-serif;
@@ -17,211 +27,60 @@
       background: #1e1e1e;
       color: #eee;
     }
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.6rem 1rem;
-      background: #fff;
-      border-bottom: 1px solid #ddd;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      transition: background 0.3s;
-    }
-    body.dark .top-bar {
-      background: #2c2c2c;
-      border-color: #444;
-    }
-    .logo {height: 38px;}
-    .nav-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-    .nav-toggle span {
-      height: 3px;
-      width: 22px;
-      background: #333;
-      margin: 3px 0;
-      transition: all 0.3s ease;
-    }
-    body.dark .nav-toggle span {
-      background: #eee;
-    }
-    .nav-menu {
-      display: flex;
-      gap: 0.8rem;
-      transition: all 0.3s ease;
-    }
-    .nav-menu a {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      font-size: 0.85rem;
-      transition: color 0.3s ease;
-    }
-    .nav-menu a:hover {
-      color: #25d366;
-    }
-    body.dark .nav-menu a {
-      color: #eee;
-    }
-    body.dark .nav-menu a:hover {
-      color: #25d366;
-    }
+    .top-bar { display: flex; justify-content: space-between; align-items: center; padding: 0.6rem 1rem; background: #fff; border-bottom: 1px solid #ddd; position: sticky; top: 0; z-index: 10; transition: background 0.3s; }
+    body.dark .top-bar { background: #2c2c2c; border-color: #444; }
+    .logo {height: 42px;}
+    .nav-toggle { display: none; flex-direction: column; cursor: pointer; }
+    .nav-toggle span { height: 3px; width: 22px; background: #333; margin: 3px 0; transition: all 0.3s ease; }
+    body.dark .nav-toggle span { background: #eee; }
+    .nav-menu { display: flex; gap: 0.8rem; transition: all 0.3s ease; }
+    .nav-menu a { text-decoration: none; color: #333; font-weight: bold; font-size: 0.85rem; transition: color 0.3s ease; }
+    .nav-menu a:hover { color: #25d366; }
+    body.dark .nav-menu a { color: #eee; }
+    body.dark .nav-menu a:hover { color: #25d366; }
     @media screen and (max-width: 640px) {
       .top-bar {flex-wrap: wrap;}
       .nav-toggle {display: flex;}
-      .nav-menu {
-        width: 100%;
-        flex-direction: column;
-        display: none;
-        margin-top: 0.8rem;
-        gap: 0.5rem;
-        opacity: 0;
-        transform: translateY(-10px);
-        pointer-events: none;
-      }
-      .nav-menu.active {
-        display: flex;
-        opacity: 1;
-        transform: translateY(0);
-        pointer-events: all;
-      }
+      .nav-menu { width: 100%; flex-direction: column; display: none; margin-top: 0.8rem; gap: 0.5rem; opacity: 0; transform: translateY(-10px); pointer-events: none; }
+      .nav-menu.active { display: flex; opacity: 1; transform: translateY(0); pointer-events: all; }
     }
-    .title {
-      text-align: center;
-      padding: 1.5rem 1rem 0.5rem;
-    }
-    .title h1 {font-size: 2rem; margin-bottom: 0.3rem;}
-    .title p {font-size: 1rem; color: #666;}
+    .title { text-align: center; padding: 1.5rem 1rem 0.5rem; }
+    .title h1 { font-size: 2rem; margin-bottom: 0.3rem; }
+    .title h1 .ubuntu { font-family: 'Ubuntu', sans-serif; font-weight: 700; }
+    .title h1 .angelface { font-family: 'Angelface', cursive; font-weight: bold; color: #d4af37; }
+    .title p { font-size: 1rem; color: #666; font-family: 'Ubuntu', sans-serif; font-weight: 700; }
     body.dark .title p {color: #aaa;}
-    .section {
-      padding: 2rem 1.5rem;
-      max-width: 960px;
-      margin: auto;
-      scroll-margin-top: 160px;
-    }
-    .section h2 {
-      font-size: 1.4rem;
-      margin-bottom: 1rem;
-      color: #222;
-      text-align: center;
-    }
+    .section { padding: 2rem 1.5rem; max-width: 960px; margin: auto; scroll-margin-top: 160px; }
+    .section h2 { font-size: 1.4rem; margin-bottom: 1rem; color: #222; text-align: center; }
     body.dark .section h2 {color: #ddd;}
-    .produk-container {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      scroll-behavior: smooth;
-      height: 480px;
-      position: relative;
-    }
-    .produk-item {
-      flex: 0 0 100%;
-      scroll-snap-align: start;
-      text-align: center;
-      padding: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .produk-item object, .produk-item img {
-      max-height: 400px;
-      width: auto;
-      max-width: 100%;
-      object-fit: contain;
-    }
-    .produk-item p {margin-top: 0.5rem; color: #555;}
-    body.dark .produk-item p {color: #ccc;}
-    .produk-nav {
-      text-align: center;
-      margin-top: 1rem;
-    }
-    .produk-nav span {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: #ccc;
-      margin: 0 5px;
-    }
-    .produk-nav span.active {
-      background: #25d366;
-    }
-    .produk-arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 2rem;
-      color: #25d366;
-      background: #fff;
-      border-radius: 50%;
-      padding: 0.3rem 0.6rem;
-      cursor: pointer;
-      z-index: 5;
-    }
+    .produk-container { display: flex; overflow-x: auto; scroll-snap-type: x mandatory; scroll-behavior: smooth; height: 480px; position: relative; }
+    .produk-item { flex: 0 0 100%; scroll-snap-align: start; text-align: center; padding: 1rem; display: flex; flex-direction: column; align-items: center; justify-content: center; }
+    .produk-item object, .produk-item img { max-height: 400px; width: auto; max-width: 100%; object-fit: contain; }
+    .produk-item p { margin-top: 0.5rem; color: #555; }
+    body.dark .produk-item p { color: #ccc; }
+    .produk-nav { text-align: center; margin-top: 1rem; }
+    .produk-nav span { display: inline-block; width: 10px; height: 10px; border-radius: 50%; background: #ccc; margin: 0 5px; }
+    .produk-nav span.active { background: #25d366; }
+    .produk-arrow { position: absolute; top: 50%; transform: translateY(-50%); font-size: 2rem; color: #25d366; background: #fff; border-radius: 50%; padding: 0.3rem 0.6rem; cursor: pointer; z-index: 5; }
     .produk-arrow.left {left: 10px;}
     .produk-arrow.right {right: 10px;}
-    .cta {
-      text-align: center;
-      margin: 2rem 0;
-    }
-    .cta a {
-      background: #25d366;
-      color: white;
-      padding: 0.8rem 1.5rem;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #999;
-    }
-    .kontak-box {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      margin-top: 1rem;
-    }
-    .kontak-link {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      background: #f1f1f1;
-      padding: 0.6rem 1rem;
-      border-radius: 8px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-    .kontak-link img {
-      width: 20px;
-      height: 20px;
-    }
-    .dark-toggle {
-      position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      background: #25d366;
-      color: white;
-      padding: 0.5rem 1rem;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      font-size: 0.8rem;
-      z-index: 20;
-    }
+    .cta { text-align: center; margin: 2rem 0; }
+    .cta a { background: #25d366; color: white; padding: 0.8rem 1.5rem; text-decoration: none; border-radius: 6px; font-weight: bold; font-size: 1rem; }
+    footer { text-align: center; padding: 1rem; font-size: 0.9rem; color: #999; }
+    .kontak-box { display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap; margin-top: 1rem; }
+    .kontak-link { display: inline-flex; align-items: center; gap: 0.5rem; background: #f1f1f1; padding: 0.6rem 1rem; border-radius: 8px; text-decoration: none; color: #333; font-weight: bold; }
+    .kontak-link img { width: 20px; height: 20px; }
+    .dark-toggle { position: fixed; bottom: 1rem; right: 1rem; background: #25d366; color: white; padding: 0.5rem 1rem; border-radius: 999px; border: none; cursor: pointer; font-size: 0.8rem; z-index: 20; }
+    .section.testimoni p { margin-bottom: 1.2rem; padding: 0.8rem 1rem; border: 1px solid #ddd; border-radius: 6px; background: #f9f9f9; }
+    body.dark .section.testimoni p { border-color: #444; background: #2a2a2a; }
+    .section.kenapa { background: #f5f5f5; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; }
+    body.dark .section.kenapa { background: #2a2a2a; color: #eee; }
+    .section.kenapa ul { max-width: 700px; margin: 0 auto; padding-left: 1.2rem; }
+    .section.kenapa li { margin-bottom: 1rem; line-height: 1.5; }
   </style>
 </head>
 <body>
+  <!-- Top bar dan nav tetap --><!-- ... -->
   <div class="top-bar">
     <img src="logo.png" alt="Logo JP" class="logo" />
     <div class="nav-toggle" onclick="toggleMenu()">
@@ -231,14 +90,17 @@
       <a href="#home" onclick="closeMenu()">Home</a>
       <a href="#produk" onclick="closeMenu()">Portfolio</a>
       <a href="#testimoni" onclick="closeMenu()">Testimoni</a>
+      <a href="#kenapa" onclick="closeMenu()">Kenapa Kami</a>
       <a href="#kontak" onclick="closeMenu()">Kontak</a>
     </div>
   </div>
 
   <header class="title section" id="home">
-    <h1>JP Desainer Kreatif</h1>
-    <p>Desain Eksklusif Siap Cetak</p>
+    <h1><span class="ubuntu">JP Desainer</span> <span class="angelface">Kreatif</span></h1>
+    <p>Desain Logo & Visual Branding</p>
   </header>
+
+  <!-- Portfolio, Testimoni, dan lainnya tetap --><!-- ... -->
 
   <section class="section" id="produk">
     <h2>Portfolio Desain</h2>
@@ -247,15 +109,51 @@
       <div class="produk-container" id="produkSlider">
         <div class="produk-item">
           <object data="Promosi.svg" type="image/svg+xml">
-            <img src="Promosi.jpg" alt="Desain 1" />
+            <img src="Promosi.jpg" alt="Desain Promosi" />
           </object>
           <p>Desain Promosiku</p>
         </div>
         <div class="produk-item">
           <object data="preview1.svg" type="image/svg+xml">
-            <img src="preview1.jpg" alt="Desain 2" />
+            <img src="preview1.jpg" alt="Banner Jasa Las" />
           </object>
-          <p>Desain Feed Instagram UMKM</p>
+          <p>Banner Jasa Las</p>
+        </div>
+        <div class="produk-item">
+          <object data="preview2.svg" type="image/svg+xml">
+            <img src="preview2.jpg" alt="Banner Kedai Mania" />
+          </object>
+          <p>Banner Kedai Mania</p>
+        </div>
+        <div class="produk-item">
+          <object data="preview3.svg" type="image/svg+xml">
+            <img src="preview3.jpg" alt="Banner Warung Teh Lina" />
+          </object>
+          <p>Banner Warung Teh Lina</p>
+        </div>
+        <div class="produk-item">
+          <object data="preview4.svg" type="image/svg+xml">
+            <img src="preview4.jpg" alt="Desain Sablon Baju" />
+          </object>
+          <p>Desain Sablon Baju</p>
+        </div>
+        <div class="produk-item">
+          <object data="preview5.svg" type="image/svg+xml">
+            <img src="preview5.jpg" alt="Logo Masjid" />
+          </object>
+          <p>Logo Masjid</p>
+        </div>
+        <div class="produk-item">
+          <object data="preview6.svg" type="image/svg+xml">
+            <img src="preview6.jpg" alt="Logo Pecinta Burung" />
+          </object>
+          <p>Logo Pecinta Burung</p>
+        </div>
+        <div class="produk-item">
+          <object data="preview7.svg" type="image/svg+xml">
+            <img src="preview7.jpg" alt="Logo Hammah Rabbits" />
+          </object>
+          <p>Logo Hammah Rabbits</p>
         </div>
       </div>
       <span class="produk-arrow right" onclick="scrollProduk(1)">&#10095;</span>
@@ -266,14 +164,28 @@
     </div>
   </section>
 
-  <section class="section" id="testimoni">
+  <section class="section testimoni" id="testimoni">
     <h2>Testimoni Pelanggan</h2>
     <p><em>"Makasih bang.
 Bermanfaat banget buat saya.
 Semoga Allah membalas kebaikan Abang. Aamiin🤲</em> – Aris SHd</p>
     <p><em>"Desain dari JP sangat keren dan cepat jadi, cocok banget untuk promosi usaha saya."</em> – Adi</p>
+    <p><em>"Terima Kasih Bosku 🙏. Keren habis 👍</em> – Suare Lombok</p>
     <p><em>"Desainnya beda dari yang lain, profesional banget dan cepat merespons revisi!"</em> – Andra</p>
   </section>
+
+  <section class="section kenapa" id="kenapa">
+    <h2>Mengapa harus JP Desainer?</h2>
+    <ul>
+      <li>✅ Desain eksklusif dan dibuat khusus sesuai karakter brand Anda, bukan template pasaran.</li>
+      <li>✅ File vektor siap cetak, hasil tajam dan tidak pecah meski dicetak besar.</li>
+      <li>✅ Komunikasi cepat dan terbuka, revisi mudah tanpa ribet.</li>
+      <li>✅ Proses kreatif langsung ditangani oleh desainer berpengalaman.</li>
+      <li>✅ Dukungan layanan branding visual menyeluruh sesuai kebutuhan Anda.</li>
+    </ul>
+  </section>
+
+  <!-- Kontak dan footer tetap --><!-- ... -->
 
   <section class="section" id="kontak">
     <h2>Hubungi Kami</h2>
