--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta property="og:description" content="Desain eksklusif, siap cetak besar, bukan stok massal. Cocok untuk brand kamu!" />
   <meta property="og:image" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.jpg" />
   <meta property="og:url" content="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/" />
+  <meta name="description" content="Jasa desain logo eksklusif, banner promosi, dan branding visual. Cocok untuk bisnis dan UMKM.">
+  <meta name="keywords" content="desain logo, jasa desain, banner usaha, branding usaha, JP Desainer Kreatif">
+  <meta name="author" content="Joko Prasetyo">
+  <meta name="robots" content="index, follow">
+<meta name="google-site-verification" content="kode-verifikasi-dari-google" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
   <style>
     @font-face {
