--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="robots" content="index, follow">
 <meta name="google-site-verification" content="kode-verifikasi-dari-google" />
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+<link rel="preload" href="fonts/Angelface.otf" as="font" type="font/otf" crossorigin="anonymous">
   <style>
     @font-face {
       font-family: 'Angelface';
@@ -113,51 +114,67 @@
       <span class="produk-arrow left" onclick="scrollProduk(-1)">&#10094;</span>
       <div class="produk-container" id="produkSlider">
         <div class="produk-item">
-          <object data="Promosi.svg" type="image/svg+xml">
-            <img src="Promosi.jpg" alt="Desain Promosi" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.svg" target="_blank">
+            <object data="Promosi.svg" type="image/svg+xml" loading="lazy">
+              <img src="Promosi.jpg" alt="Desain Promosi" loading="lazy" />
+            </object>
+          </a>
           <p>Desain Promosiku</p>
         </div>
         <div class="produk-item">
-          <object data="preview1.svg" type="image/svg+xml">
-            <img src="preview1.jpg" alt="Banner Jasa Las" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview1.svg" target="_blank">
+            <object data="preview1.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview1.jpg" alt="Banner Jasa Las" loading="lazy" />
+            </object>
+          </a>
           <p>Banner Jasa Las</p>
         </div>
         <div class="produk-item">
-          <object data="preview2.svg" type="image/svg+xml">
-            <img src="preview2.jpg" alt="Banner Kedai Mania" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview2.svg" target="_blank">
+            <object data="preview2.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview2.jpg" alt="Banner Kedai Mania" loading="lazy" />
+            </object>
+          </a>
           <p>Banner Kedai Mania</p>
         </div>
         <div class="produk-item">
-          <object data="preview3.svg" type="image/svg+xml">
-            <img src="preview3.jpg" alt="Banner Warung Teh Lina" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview3.svg" target="_blank">
+            <object data="preview3.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview3.jpg" alt="Banner Warung Teh Lina" loading="lazy" />
+            </object>
+          </a>
           <p>Banner Warung Teh Lina</p>
         </div>
         <div class="produk-item">
-          <object data="preview4.svg" type="image/svg+xml">
-            <img src="preview4.jpg" alt="Desain Sablon Baju" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview4.svg" target="_blank">
+            <object data="preview4.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview4.jpg" alt="Desain Sablon Baju" loading="lazy" />
+            </object>
+          </a>
           <p>Desain Sablon Baju</p>
         </div>
         <div class="produk-item">
-          <object data="preview5.svg" type="image/svg+xml">
-            <img src="preview5.jpg" alt="Logo Masjid" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview5.svg" target="_blank">
+            <object data="preview5.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview5.jpg" alt="Logo Masjid" loading="lazy" />
+            </object>
+          </a>
           <p>Logo Masjid</p>
         </div>
         <div class="produk-item">
-          <object data="preview6.svg" type="image/svg+xml">
-            <img src="preview6.jpg" alt="Logo Pecinta Burung" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview6.svg" target="_blank">
+            <object data="preview6.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview6.jpg" alt="Logo Pecinta Burung" loading="lazy" />
+            </object>
+          </a>
           <p>Logo Pecinta Burung</p>
         </div>
         <div class="produk-item">
-          <object data="preview7.svg" type="image/svg+xml">
-            <img src="preview7.jpg" alt="Logo Hammah Rabbits" />
-          </object>
+          <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview7.svg" target="_blank">
+            <object data="preview7.svg" type="image/svg+xml" loading="lazy">
+              <img src="preview7.jpg" alt="Logo Hammah Rabbits" loading="lazy" />
+            </object>
+          </a>
           <p>Logo Hammah Rabbits</p>
         </div>
       </div>
