--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.svg" target="_blank">
             <!-- <object data="Promosi.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="Promosi.jpg" alt="Desain Promosi" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Desain Promosiku</p>
         </div>
@@ -125,7 +125,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview1.svg" target="_blank">
             <!-- <object data="preview1.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview1.jpg" alt="Banner Jasa Las" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Banner Jasa Las</p>
         </div>
@@ -133,7 +133,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview2.svg" target="_blank">
             <!-- <object data="preview2.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview2.jpg" alt="Banner Kedai Mania" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Banner Kedai Mania</p>
         </div>
@@ -141,7 +141,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview3.svg" target="_blank">
             <!-- <object data="preview3.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview3.jpg" alt="Banner Warung Teh Lina" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Banner Warung Teh Lina</p>
         </div>
@@ -149,7 +149,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview4.svg" target="_blank">
             <!-- <object data="preview4.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview4.jpg" alt="Desain Sablon Baju" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Desain Sablon Baju</p>
         </div>
@@ -157,7 +157,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview5.svg" target="_blank">
             <!-- <object data="preview5.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview5.jpg" alt="Logo Masjid" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Logo Masjid</p>
         </div>
@@ -165,7 +165,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview6.svg" target="_blank">
             <!-- <object data="preview6.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview6.jpg" alt="Logo Pecinta Burung" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Logo Pecinta Burung</p>
         </div>
@@ -173,7 +173,7 @@
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview7.svg" target="_blank">
             <!-- <object data="preview7.svg" type="image/svg+xml" loading="lazy"> -->
               <img src="preview7.jpg" alt="Logo Hammah Rabbits" />
-            </object>
+            <!-- </object> -->
           </a>
           <p>Logo Hammah Rabbits</p>
         </div>
@@ -228,39 +228,55 @@ Semoga Allah membalas kebaikan Abang. Aamiin🤲</em> – Aris SHd</p>
   </footer>
 
   <button class="dark-toggle" onclick="toggleDark()">🌙 Mode</button>
+<script>
+  // === Navigasi Menu ===
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('active');
+  }
+  function closeMenu() {
+    document.getElementById('navMenu').classList.remove('active');
+  }
 
-  <script>
-    const slider = document.getElementById('produkSlider');
-    const nav = document.getElementById('produkNav');
-    const items = slider.querySelectorAll('.produk-item');
-    let currentSlide = 0;
+  // === Mode Gelap ===
+  function toggleDark() {
+    document.body.classList.toggle('dark');
+  }
 
-    // Buat dot navigasi otomatis
-    items.forEach((_, i) => {
-      const dot = document.createElement('span');
-      if (i === 0) dot.classList.add('active');
-      dot.addEventListener('click', () => scrollToSlide(i));
-      nav.appendChild(dot);
-    });
+  // === Slider Produk ===
+  const slider = document.getElementById('produkSlider');
+  const nav = document.getElementById('produkNav');
+  const items = slider.querySelectorAll('.produk-item');
+  let currentSlide = 0;
 
-    function scrollToSlide(i) {
-      currentSlide = i;
-      slider.scrollTo({ left: items[i].offsetLeft, behavior: 'smooth' });
-      updateDots();
-    }
+  // Bersihkan nav dots terlebih dahulu
+  nav.innerHTML = "";
 
-    function scrollProduk(dir) {
-      currentSlide += dir;
-      if (currentSlide < 0) currentSlide = 0;
-      if (currentSlide >= items.length) currentSlide = items.length - 1;
-      scrollToSlide(currentSlide);
-    }
+  // Buat dot navigasi otomatis
+  items.forEach((_, i) => {
+    const dot = document.createElement('span');
+    if (i === 0) dot.classList.add('active');
+    dot.addEventListener('click', () => scrollToSlide(i));
+    nav.appendChild(dot);
+  });
 
-    function updateDots() {
-      const dots = nav.querySelectorAll('span');
-      dots.forEach(dot => dot.classList.remove('active'));
-      if (dots[currentSlide]) dots[currentSlide].classList.add('active');
-    }
-  </script>
+  function scrollToSlide(i) {
+    currentSlide = i;
+    slider.scrollTo({ left: items[i].offsetLeft, behavior: 'smooth' });
+    updateDots();
+  }
+
+  function scrollProduk(dir) {
+    currentSlide += dir;
+    if (currentSlide < 0) currentSlide = 0;
+    if (currentSlide >= items.length) currentSlide = items.length - 1;
+    scrollToSlide(currentSlide);
+  }
+
+  function updateDots() {
+    const dots = nav.querySelectorAll('span');
+    dots.forEach(dot => dot.classList.remove('active'));
+    if (dots[currentSlide]) dots[currentSlide].classList.add('active');
+  }
+</script>
 </body>
 </html>
