--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
     .section { padding: 2rem 1.5rem; max-width: 960px; margin: auto; scroll-margin-top: 160px; }
     .section h2 { font-size: 1.4rem; margin-bottom: 1rem; color: #222; text-align: center; }
     body.dark .section h2 {color: #ddd;}
+  .layanan {
+    background: #f7f7f7;
+    color: #333;
+  }
+  body.dark .layanan {
+    background: #2b2b2b;
+    color: #eee;
+  }
+  .layanan ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  .layanan li {
+    margin-bottom: 1.2rem;
+  }
+  .layanan p {
+    text-align: center;
+    max-width: 700px;
+    margin: 0 auto 1.5rem;
+  }
     .produk-container { display: flex; overflow-x: auto; scroll-snap-type: x mandatory; scroll-behavior: smooth; height: 310px; position: relative; }
     .produk-item { flex: 0 0 100%; scroll-snap-align: start; text-align: center; padding: 1rem; display: flex; flex-direction: column; align-items: center; justify-content: center; }
     .produk-item object, .produk-item img { max-height: 300px; width: auto; max-width: 100%; object-fit: contain; }
@@ -94,6 +114,7 @@
     </div>
     <div class="nav-menu" id="navMenu">
       <a href="#home" onclick="closeMenu()">Home</a>
+      <a href="#layanan" onclick="closeMenu()">Layanan Kami</a>
       <a href="#produk" onclick="closeMenu()">Portfolio</a>
       <a href="#testimoni" onclick="closeMenu()">Testimoni</a>
       <a href="#kenapa" onclick="closeMenu()">Kenapa Kami</a>
@@ -107,6 +128,53 @@
   </header>
 
   <!-- Portfolio, Testimoni, dan lainnya tetap --><!-- ... -->
+<section class="section layanan" id="layanan">
+  <h2>Layanan yang Kami Tawarkan</h2>
+  <p>
+    JP Desainer Kreatif hadir sebagai solusi terpercaya untuk membantu Anda membangun citra visual usaha maupun personal dengan desain yang kuat, eksklusif, dan siap pakai. Berikut adalah layanan-layanan yang kami sediakan:
+  </p>
+  <ul>
+    <li><strong>Desain Logo Eksklusif</strong><br>
+      Logo berdasarkan karakter dan nilai brand Anda — bukan desain stok. Format vector siap cetak dalam berbagai ukuran tanpa kehilangan kualitas.</li><li><strong>Desain Banner / Spanduk Promosi</strong><br>
+  Cocok untuk usaha kuliner, bengkel, jasa, event, dan lainnya. Dirancang mencolok dan jelas terbaca dari jarak jauh.</li>
+
+<li><strong>Desain Kaos / Sablon (Brand atau Komunitas)</strong><br>
+  Desain visual siap digunakan untuk produksi sablon atau digital printing. Cocok untuk clothing, event komunitas, hingga merchandise pribadi.</li>
+
+<li><strong>Desain Label Produk / Kemasan</strong><br>
+  Membuat tampilan produk lebih menarik dan profesional, meningkatkan daya tarik di rak penjualan.</li>
+
+<li><strong>Desain Feed dan Story Media Sosial</strong><br>
+  Konten visual Instagram atau Facebook yang rapi dan selaras dengan brand Anda, memperkuat kepercayaan audiens.</li>
+
+<li><strong>Desain Kartu Nama & Identitas Usaha</strong><br>
+  Format elegan dan mudah dibagikan, menciptakan kesan profesional sejak pertemuan pertama.</li>
+
+<li><strong>Desain Company Profile / Brosur Digital & Cetak</strong><br>
+  Tampilan informatif dan menarik untuk memperkenalkan usaha kepada calon klien atau mitra.</li>
+
+<li><strong>Desain Undangan Digital & Cetak</strong><br>
+  Untuk acara pernikahan, tahlil, khitanan, reuni, dan lainnya. Format siap cetak atau dibagikan via WhatsApp.</li>
+
+<li><strong>Desain Slide Presentasi / Template PowerPoint</strong><br>
+  Visual presentasi yang berkelas, cocok untuk seminar, bisnis, edukasi, atau pitching.</li>
+
+<li><strong>Desain Cetak Islami</strong><br>
+  Pembuatan sampul buku Yasin, banner tahlil, dan desain keagamaan lainnya dengan nuansa khusyuk dan estetika tinggi.</li>
+
+<li><strong>Pembuatan Website Profil Usaha</strong><br>
+  Kami menyediakan layanan website profesional, tampil menarik dan mudah diakses dari semua perangkat. 
+  <br><br>
+  <em>Tersedia dua pilihan:</em><br>
+  <strong>• Versi Hemat</strong> – Website sederhana tanpa biaya hosting bulanan. Cocok untuk pelaku usaha yang ingin tampil kredibel secara digital dengan biaya terjangkau.<br>
+  <strong>• Versi Premium</strong> – Website lengkap dengan domain pribadi. Desain eksklusif dan fitur lengkap untuk usaha yang ingin bersaing secara digital.
+</li>
+
+<li><strong>Pembuatan Google Bisnisku (Maps & Profil Usaha)</strong><br>
+  Kami bantu bisnis Anda tampil di Google Maps, lengkap dengan profil, jam buka, dan ulasan pelanggan agar mudah ditemukan oleh calon pelanggan lokal.</li>
+
+  </ul>
+</section>
 
   <section class="section" id="produk">
     <h2>Portfolio Desain</h2>
