--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
 <body>
   <!-- Navigasi -->
   <div class="top-bar">
-    <img src="logo.png" alt="Logo JP" class="logo" fetchpriority="high" />
+    <img src="logo.webp" alt="Logo JP" class="logo" fetchpriority="high" />
     <div class="nav-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
     <div class="nav-menu" id="navMenu">
       <a href="#home" onclick="closeMenu()">Home</a>
@@ -122,7 +122,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/Promosi.svg" target="_blank">
             <!-- <object data="Promosi.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="Promosi.jpg" alt="Desain Promosi" />
+              <img src="Promosi.webp" alt="Desain Promosi" />
             <!-- </object> -->
           </a>
           <p>Desain Promosiku</p>
@@ -130,7 +130,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview1.svg" target="_blank">
             <!-- <object data="preview1.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview1.jpg" alt="Banner Jasa Las" />
+              <img src="preview1.webp" alt="Banner Jasa Las" />
             <!-- </object> -->
           </a>
           <p>Banner Jasa Las</p>
@@ -138,7 +138,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview2.svg" target="_blank">
             <!-- <object data="preview2.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview2.jpg" alt="Banner Kedai Mania" />
+              <img src="preview2.webp" alt="Banner Kedai Mania" />
             <!-- </object> -->
           </a>
           <p>Banner Kedai Mania</p>
@@ -146,7 +146,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview3.svg" target="_blank">
             <!-- <object data="preview3.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview3.jpg" alt="Banner Warung Teh Lina" />
+              <img src="preview3.webp" alt="Banner Warung Teh Lina" />
             <!-- </object> -->
           </a>
           <p>Banner Warung Teh Lina</p>
@@ -154,7 +154,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview4.svg" target="_blank">
             <!-- <object data="preview4.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview4.jpg" alt="Desain Sablon Baju" />
+              <img src="preview4.webp" alt="Desain Sablon Baju" />
             <!-- </object> -->
           </a>
           <p>Desain Sablon Baju</p>
@@ -162,7 +162,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview5.svg" target="_blank">
             <!-- <object data="preview5.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview5.jpg" alt="Logo Masjid" />
+              <img src="preview5.webp" alt="Logo Masjid" />
             <!-- </object> -->
           </a>
           <p>Logo Masjid</p>
@@ -170,7 +170,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview6.svg" target="_blank">
             <!-- <object data="preview6.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview6.jpg" alt="Logo Pecinta Burung" />
+              <img src="preview6.webp" alt="Logo Pecinta Burung" />
             <!-- </object> -->
           </a>
           <p>Logo Pecinta Burung</p>
@@ -178,7 +178,7 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         <div class="produk-item">
           <a href="https://mrjokoprastiyo.github.io/JP-Desainer-Kreatif/preview7.svg" target="_blank">
             <!-- <object data="preview7.svg" type="image/svg+xml" loading="lazy"> -->
-              <img src="preview7.jpg" alt="Logo Hammah Rabbits" />
+              <img src="preview7.webp" alt="Logo Hammah Rabbits" />
             <!-- </object> -->
           </a>
           <p>Logo Hammah Rabbits</p>
