--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="preload" href="fonts/Ubuntu-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/Angelface.otf" as="font" type="font/otf" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/style.css"></noscript>
   <link rel="preload" as="image" href="logo.png">
   <link rel="preload" as="image" href="Promosi.jpg">
 </head>
