--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="cache-control" content="public, max-age=31536000">
   <meta http-equiv="expires" content="31536000">
-  <title>JP Desainer Kreatif</title>
+ <title>JP Desainer Kreatif - Jasa Desain Logo & Visual Branding</title>
 
   <!-- SEO dan Open Graph -->
   <meta property="og:title" content="JP Desainer Kreatif – Desain Logo & Visual Branding" />
@@ -56,14 +56,12 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       src: url('fonts/Angelface.otf') format('opentype');
       font-display: swap;
     }
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
-
     body {
       font-family: sans-serif;
       background: #fff;
@@ -71,12 +69,10 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       line-height: 1.6;
       transition: background 0.3s, color 0.3s;
     }
-
     body.dark {
       background: #1e1e1e;
       color: #eee;
     }
-
     .top-bar {
       display: flex;
       justify-content: space-between;
@@ -89,22 +85,18 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       z-index: 10;
       transition: background 0.3s;
     }
-
     body.dark .top-bar {
       background: #2c2c2c;
       border-color: #444;
     }
-
     .logo {
       height: 42px;
     }
-
     .nav-toggle {
       display: none;
       flex-direction: column;
       cursor: pointer;
     }
-
     .nav-toggle span {
       height: 3px;
       width: 22px;
@@ -112,17 +104,14 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       margin: 3px 0;
       transition: all 0.3s ease;
     }
-
     body.dark .nav-toggle span {
       background: #eee;
     }
-
     .nav-menu {
       display: flex;
       gap: 0.8rem;
       transition: all 0.3s ease;
     }
-
     .nav-menu a {
       text-decoration: none;
       color: #333;
@@ -130,28 +119,22 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       font-size: 0.85rem;
       transition: color 0.3s ease;
     }
-
     .nav-menu a:hover {
       color: #25d366;
     }
-
     body.dark .nav-menu a {
       color: #eee;
     }
-
     body.dark .nav-menu a:hover {
       color: #25d366;
     }
-
     @media screen and (max-width: 640px) {
       .top-bar {
         flex-wrap: wrap;
       }
-
       .nav-toggle {
         display: flex;
       }
-
       .nav-menu {
         width: 100%;
         flex-direction: column;
@@ -162,7 +145,6 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         transform: translateY(-10px);
         pointer-events: none;
       }
-
       .nav-menu.active {
         display: flex;
         opacity: 1;
@@ -170,82 +152,67 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
         pointer-events: all;
       }
     }
-
     .title {
       text-align: center;
       padding: 1.5rem 1rem 0.5rem;
     }
-
     .title h1 {
       font-size: 2rem;
       margin-bottom: 0.3rem;
     }
-
     .title h1 .ubuntu {
       font-family: 'Ubuntu', sans-serif;
       font-weight: 700;
     }
-
     .title h1 .angelface {
       font-family: 'Angelface', cursive;
       font-weight: bold;
       color: #b8860b;
     }
-
     .title p {
       font-size: 1rem;
       color: #666;
       font-family: 'Ubuntu', sans-serif;
       font-weight: 700;
     }
-
     body.dark .title p {
       color: #aaa;
     }
-
     .section {
       padding: 2rem 1.5rem;
       max-width: 960px;
       margin: auto;
       scroll-margin-top: 160px;
     }
-
     .section h2 {
       font-size: 1.4rem;
       margin-bottom: 1rem;
       color: #222;
       text-align: center;
     }
-
     body.dark .section h2 {
       color: #ddd;
     }
-
     .layanan {
       background: #f7f7f7;
       color: #333;
     }
-
     body.dark .layanan {
       background: #2b2b2b;
       color: #eee;
     }
-
     .layanan ul {
       list-style: none;
       padding-left: 0;
     }
-
     .layanan li {
       margin-bottom: 1.2rem;
     }
-
     .layanan p {
       text-align: center;
       max-width: 700px;
       margin: 0 auto 1.5rem;
     }
-
     .produk-container {
       display: flex;
       overflow-x: auto;
@@ -254,7 +221,6 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       height: 310px;
       position: relative;
     }
-
     .produk-item {
       flex: 0 0 100%;
       scroll-snap-align: start;
@@ -265,7 +231,6 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       align-items: center;
       justify-content: center;
     }
-
     .produk-item object,
     .produk-item img {
       max-height: 300px;
@@ -273,21 +238,17 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       max-width: 100%;
       object-fit: contain;
     }
-
     .produk-item p {
       margin-top: 0.5rem;
       color: #555;
     }
-
     body.dark .produk-item p {
       color: #ccc;
     }
-
     .produk-nav {
       text-align: center;
       margin-top: 1rem;
     }
-
     .produk-nav span {
       display: inline-block;
       width: 10px;
@@ -296,11 +257,9 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       background: #ccc;
       margin: 0 5px;
     }
-
     .produk-nav span.active {
       background: #25d366;
     }
-
     .produk-arrow {
       position: absolute;
       top: 50%;
@@ -313,20 +272,16 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       cursor: pointer;
       z-index: 5;
     }
-
     .produk-arrow.left {
       left: 10px;
     }
-
     .produk-arrow.right {
       right: 10px;
     }
-
     .cta {
       text-align: center;
       margin: 2rem 0;
     }
-
     .cta a {
       background: #25d366;
       color: #fff;
@@ -336,18 +291,15 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       font-weight: bold;
       font-size: 1rem;
     }
-
     footer {
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
       color: #666;
     }
-
     body.dark footer {
       color: #ccc;
     }
-
     .kontak-box {
       display: flex;
       justify-content: center;
@@ -355,7 +307,6 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       flex-wrap: wrap;
       margin-top: 1rem;
     }
-
     .kontak-link {
       display: inline-flex;
       align-items: center;
@@ -367,12 +318,10 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       color: #333;
       font-weight: bold;
     }
-
     .kontak-link img {
       width: 20px;
       height: 20px;
     }
-
     .dark-toggle {
       position: fixed;
       bottom: 1rem;
@@ -386,7 +335,6 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       font-size: 0.8rem;
       z-index: 20;
     }
-
     .section.testimoni p {
       margin-bottom: 1.2rem;
       padding: 0.8rem 1rem;
@@ -394,29 +342,24 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
       border-radius: 6px;
       background: #f9f9f9;
     }
-
     body.dark .section.testimoni p {
       border-color: #444;
       background: #2a2a2a;
     }
-
     .section.kenapa {
       background: #f5f5f5;
       border-top: 1px solid #ddd;
       border-bottom: 1px solid #ddd;
     }
-
     body.dark .section.kenapa {
       background: #2a2a2a;
       color: #eee;
     }
-
     .section.kenapa ul {
       max-width: 700px;
       margin: 0 auto;
       padding-left: 1.2rem;
     }
-
     .section.kenapa li {
       margin-bottom: 1rem;
       line-height: 1.5;
@@ -424,9 +367,9 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
   </style>
 </head>
 <body>
-  <!-- Navigasi -->
+
   <div class="top-bar">
-    <img src="logo.webp" alt="Logo JP" class="logo" fetchpriority="high" width="111" height="42" loading="lazy" decoding="async">
+    <img src="logo.webp" alt="JP Desainer Kreatif - Jasa Desain Logo & Visual Branding" class="logo" fetchpriority="high" width="111" height="42" loading="lazy" decoding="async">
     <div class="nav-toggle" onclick="toggleMenu()"><span></span><span></span><span></span></div>
     <div class="nav-menu" id="navMenu">
       <a href="#home" onclick="closeMenu()">Home</a>
@@ -438,7 +381,6 @@ media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixe
     </div>
   </div>
 
-  <!-- Header -->
   <header class="title section" id="home">
     <h1><span class="ubuntu">JP Desainer</span> <span class="angelface">Kreatif</span></h1>
     <p>Desain Logo & Visual Branding</p>
@@ -590,8 +532,6 @@ Semoga Allah membalas kebaikan Abang. Aamiin🤲</em> – Aris SHd</p>
       <li>✅ Dukungan layanan branding visual menyeluruh sesuai kebutuhan Anda.</li>
     </ul>
   </section>
-
-  <!-- Kontak dan footer tetap --><!-- ... -->
 
   <section class="section" id="kontak">
     <h2>Hubungi Kami</h2>
